src/main/scala/FirstStep/shoutput/load.output
Welcome to Scala version 2.11.7 (Java HotSpot(TM) 64-Bit Server VM, Java 
1.8.0_45).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :load script.scala
Loading script.scala...
number: Int = 6
<console>:11: error: reassignment to val
       number = 7
              ^
number: Int = 7
list: List[Int] = List(1, 2, 3)
isPalindrome: (str: String)Boolean
res0: Boolean = true
res1: Boolean = false

scala> :quit
